# Veil

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  INTERFACES.md  PROGRESS.md  README.md  fly.toml
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/e2e/: dbgdep.mjs  decoy.spec.ts  wallet.spec.ts
app/public/animation/: Glassmorphism_transfer-animaiton.lottie  Loading_Animation_BoredHand.lottie
app/public/circuit/: transaction.wasm  verification_key.json
app/src/: App.tsx  declarations.d.ts  index.css  main.tsx
app/src/components/: AnonymityMeter.tsx  CurrencySelect.tsx  DecoyBooster.tsx  Layout.tsx  MergeGlobalIndicator.tsx  MergePrepBanner.tsx  MergeStatus.tsx  MergeWarningModal.tsx  PoofSparkle.tsx  TxProgress.tsx  ui.tsx
app/src/components/fx/: MagicTextReveal.tsx  MagicWand.tsx  PoofLottie.tsx  SmokeBackground.tsx
app/src/components/ui/: AdvancedPoofActivityReport.tsx
app/src/lib/: activity.test.ts  activity.ts  anonymitySet.test.ts  anonymitySet.ts  chain.scan.test.ts  chain.ts  crypto.test.ts  crypto.ts  currencies.ts  decoy.test.ts  decoy.ts  faucet.ts  integration.test.ts  mergePlan.test.ts  mergePlan.ts  merkleTree.ts  noteValidation.test.ts  noteValidation.ts  privacyScore.ts  proof.ts  prover.ts  relayer.ts  scan.test.ts  scan.ts  schedule.test.ts  schedule.ts  signer.ts  spendSelection.test.ts  spendSelection.ts  transfer.test.ts  types.ts  useMergePlanner.ts  useScheduler.ts  walletkit.ts  witness.ts
app/src/pages/: Activity.tsx  Dashboard.tsx  Deposit.tsx  Disclosure.tsx  Landing.tsx  Onboarding.tsx  Privacy.tsx  Receive.tsx  Scheduled.tsx  Send.tsx  Withdraw.tsx
app/src/store/: wallet.ts
app/src/styles/: landing.css
app/src/workers/: prover.ts
circuits/: README.md  package-lock.json  package.json
circuits/scripts/: _dep_gen.cjs  _deposit_onchain.cjs  ceremony.sh  export_vk_rust.js  gen_sample_input.js  gen_transact_fixture.js  setup.sh
circuits/src/: keypair.circom  merkleproof.circom  transaction.circom
circuits/test/: transaction.test.js
circuits/test/circuits/: note_vec.circom  pos4.circom
concepts/: 00-project-overview.md  01-system-architecture.md  02-core-concepts.md  03-cryptography-and-zk.md  04-blockchain-design.md  05-data-flow.md  06-design-decisions.md  07-glossary.md
crates/poof-contract/: Cargo.toml
crates/poof-contract/src/: error.rs  lib.rs  nullifier.rs  poseidon_host.rs  sample_proof.rs  storage.rs  test.rs  transact_e2e_test.rs  transact_fixture.rs  types.rs  verifier.rs  vk.rs
crates/poof-contract/test_snapshots/test/: deposit_pulls_tokens_into_pool.1.json  double_spend_rejected.1.json  ext_data_mismatch_rejected.1.json  first_root_matches_offchain_reconstruction.1.json  happy_path_inserts_and_advances.1.json  invalid_proof_rejected_before_effect.1.json  merkle_root_is_deterministic.1.json  per_currency_settlement_is_isolated.1.json  relayed_withdraw_fee_too_high_reverts.1.json  relayed_withdraw_splits_fee_to_relayer.1.json  spend_against_older_root_in_window.1.json  withdraw_releases_tokens_from_pool.1.json
crates/poof-crypto/: Cargo.toml
crates/poof-crypto/examples/: gen_poseidon_constants.rs
crates/poof-crypto/src/: field.rs  lib.rs  note.rs
crates/poof-crypto/tests/: cross_impl.rs
crates/poof-sdk/: Cargo.toml
crates/poof-sdk/src/: encrypt.rs  keys.rs  lib.rs  merkle_tree.rs  note.rs  prove.rs  scan.rs  tx.rs
crates/poof-sdk/tests/: e2e_prove.rs
crates/veil-contract/: Cargo.toml
crates/veil-contract/src/: error.rs  events.rs  lib.rs  merkle.rs  nullifier.rs  poseidon_host.rs  sample_proof.rs  storage.rs  test.rs  transact_e2e_test.rs  transact_fixture.rs  types.rs  verifier.rs  vk.rs
crates/veil-contract/test_snapshots/test/: deposit_pulls_tokens_into_pool.1.json  double_spend_rejected.1.json  duplicate_nullifier_rejected.1.json  ext_data_mismatch_rejected.1.json  first_root_matches_offchain_reconstruction.1.json  happy_path_inserts_and_advances.1.json  init_seeds_genesis_root.1.json  invalid_proof_rejected_before_effect.1.json  merkle_root_is_deterministic.1.json  merkle_root_is_deterministic.2.json  nonzero_public_amount_rejected_phase1.1.json  register_token_assigns_next_id.1.json  register_token_requires_admin_auth.1.json  root_history_window_holds.1.json  spend_against_older_root_in_window.1.json  unknown_currency_rejected.1.json  unknown_root_rejected.1.json  withdraw_beyond_custody_reverts.1.json  withdraw_releases_tokens_from_pool.1.json
crates/veil-contract/test_snapshots/transact_e2e_test/: full_transact_with_real_proof_on_host.1.json  replay_same_proof_is_rejected_as_double_spend.1.json
crates/veil-crypto/: Cargo.toml
crates/veil-crypto/examples/: gen_poseidon_constants.rs
crates/veil-crypto/src/: field.rs  lib.rs  note.rs  poseidon.rs  poseidon_constants.rs
crates/veil-crypto/tests/: cross_impl.rs
crates/veil-sdk/: Cargo.toml
crates/veil-sdk/src/: encrypt.rs  keys.rs  lib.rs  merkle_tree.rs  note.rs  prove.rs  scan.rs  tx.rs
crates/veil-sdk/tests/: e2e_prove.rs
deploy/: RAILWAY.md  addresses.json  bootstrap.sh  deploy_testnet.sh  register_token.sh
indexer/: Cargo.toml
indexer/migrations/: 0001_init.sql
indexer/src/: api.rs  config.rs  ingest.rs  lib.rs  main.rs  rpc.rs  store.rs  types.rs
relayer/: .env.example  Dockerfile  README.md  package-lock.json  package.json
relayer/src/: config.ts  encode.ts  index.ts  relay.ts  validate.test.ts
