[package]
name = "poof-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "poof-indexer"
path = "src/main.rs"

[lib]
name = "poof_indexer"
path = "src/lib.rs"

[dependencies]
# Persistence: SQLite via rusqlite with bundled libsqlite3 (no system deps).
rusqlite = { version = "0.32", features = ["bundled"] }
# Async runtime + HTTP server.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
axum = "0.7"
# JSON + serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hex encoding for 32-byte field elements on the wire / DB.
hex = "0.4"
# Real Stellar RPC poller (smoke-compiled).
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling.
anyhow = "1"
thiserror = "1"
# base64 for ciphertext decoding from RPC.
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
