[package]
name = "poof-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]

[dependencies]
poof-crypto = { path = "../poof-crypto" }
ark-bn254 = { workspace = true, features = ["std"] }
ark-ff = { workspace = true, features = ["std"] }

# Key hierarchy: separate X25519 encryption curve + HKDF derivation.
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"

# Note encryption (client-side AEAD).
chacha20poly1305 = "0.10"

# extDataHash (keccak256).
tiny-keccak = { version = "2", features = ["keccak"] }

# Witness / proof JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Deterministic blinding sampling helper (test convenience + CSPRNG for real use).
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
hex = "0.4"
