[package]
name = "veil-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Veil PLANE 3: the Soroban shielded-pool contract (authority)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `alloc` registers soroban's bump-pointer global allocator for the wasm guest;
# required because veil-crypto's arkworks field arithmetic uses `alloc`.
soroban-sdk = { version = "26.1", features = ["alloc"] }
veil-crypto = { path = "../veil-crypto", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.1", features = ["testutils"] }
hex = "0.4"

[features]
# Test-only escape hatch: makes `verifier::verify` accept on a sentinel proof so
# the contract-level edge cases (double-spend, stale root, ordering, ...) can be
# exercised without a real Groth16 proof from the circuit. The real BN254
# pairing code path stays compiled and is tested separately in verifier.rs.
mock-verifier = []
