[package]
name = "veil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Veil PLANE 1: the single source of BN254 + circomlib-compatible Poseidon truth"

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
light-poseidon = { workspace = true }

[features]
default = ["std"]
# `std` is used by the SDK, indexer and the cross-impl tests. The contract
# depends on this crate with `default-features = false` so it stays no_std.
std = ["ark-bn254/std", "ark-ff/std"]

[dev-dependencies]
ark-ff = { version = "0.5", features = ["std"] }
hex = "0.4"
